tests/compiletests/ui/private_new.stderr
error: `Counter::new` should have `pub` visibility
  --> $DIR/private_new.rs:11:9
   |
11 |         pub(crate) fn new(ctx: &Context) -> Result<Self> {
   |         ^^^

error: aborting due to previous error

